# prts-forward-bot

./: .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml
prts/plugins/weibo_push/: __init__.py  config.py  send.py  sina.py
